webview-ui/src/App.css
#root {
  width: 100%;
  max-width: 1280px;
  margin: 0 auto;
  padding: 2rem;
  text-align: center;
  display: flex;
  min-height: 100%;
  justify-content: space-between;
}

.app {
  display: flex;
  flex-direction: column;
}


code.inline-code {
  display: inline;
  background-color: lightseagreen;
  color: black;
  padding: 2px;
  border-radius: 2px;
  font-family: monospace;
  white-space: pre-wrap;
}

pre .code-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: darkslategrey;
  color: white;
  padding: 2px 8px;
  border-radius: 5px;
  border-bottom-left-radius: 0px;
  border-bottom-right-radius: 0px;
  font-family: monospace;
  font-size: 0.75rem;
  font-weight: bold;
  white-space: pre-wrap;
}

pre .code-language {
  color: lightcoral;
}

pre .copy-button {
  background-color: lightskyblue;
  color: black;
  padding: 2px;
}

pre code {
  display: block;
  background-color: #282c34;
  color: #abb2bf;
  padding: 8px;
  border-radius: 5px;
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
  font-family: monospace;
  font-size: 0.75rem;
  white-space: pre-wrap;
}

